<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search"
        android:enabled="true"
        android:icon="@drawable/ic_seach"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_addPhoto"
        android:enabled="true"
        android:icon="@drawable/ic_add_photo"
        android:title="@string/add_photo"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_likes"
        android:enabled="true"
        android:icon="@drawable/ic_like"
        android:title="@string/reacts"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_person_profile"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
</menu>