<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LayOuts">


<!--    <com.mikhaellopez.circularimageview.CircularImageView-->
<!--        android:id="@+id/image"-->
<!--        android:layout_width="160dp"-->
<!--        android:layout_height="116dp"-->
<!--        android:layout_alignParentStart="true"-->
<!--        android:layout_alignParentTop="true"-->
<!--        android:layout_marginStart="32dp"-->
<!--        android:layout_marginTop="28dp"-->
<!--        android:src="@drawable/image"-->
<!--        app:civ_border_color="#fff"-->
<!--        app:civ_border_width="4dp"-->
<!--        app:civ_shadow="true"-->
<!--        app:civ_shadow_radius="10"-->
<!--        tools:layout_editor_absoluteX="16dp"-->
<!--        tools:layout_editor_absoluteY="16dp" />-->

    <ImageView
        android:id="@+id/image"
        android:layout_width="154dp"
        android:layout_height="79dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/posts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:clickable="false"
        android:text="@string/_431"
        android:textSize="18sp"
        android:layout_marginStart="15dp"
        android:layout_toEndOf="@id/image" />

    <TextView
        android:id="@+id/followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:clickable="false"
        android:text="@string/_3632"
        android:textSize="18sp"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@id/posts" />


    <TextView
        android:id="@+id/following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:layout_marginTop="30dp"
        android:text="@string/_896"
        android:textSize="18sp"
        android:layout_marginStart="30dp"
        android:layout_toEndOf="@id/followers" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/posts"
        android:text="@string/posts"
        android:layout_marginStart="200dp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/txt_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:layout_marginStart="10dp"
        android:text="@string/followers"
        android:layout_below="@id/posts"
        android:layout_toEndOf="@id/posts"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txt_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:text="@string/following"
        android:layout_marginStart="25dp"
        android:layout_below="@id/posts"
        android:layout_toEndOf="@id/followers"
        android:textStyle="bold"/>


    <Button
        android:id="@+id/button"
        android:layout_width="169dp"
        android:layout_height="37dp"
        android:layout_below="@id/posts"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:layout_toEndOf="@+id/image"
        android:text="@string/follow" />


    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image"
        android:text="Your Name"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:layout_marginTop="10dp"
        android:layout_alignStart="@id/image"/>

    <TextView
        android:id="@+id/txt_Bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image"
        android:text="Your Bio Goes Here"
        android:layout_marginTop="30dp"
        android:layout_alignStart="@id/txt_name"/>

    <TextView
        android:id="@+id/txt_Bio2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image"
        android:text="And Here"
        android:layout_marginTop="50dp"
        android:layout_alignStart="@id/txt_name"/>




    <android.support.design.widget.BottomNavigationView
        android:id="@+id/middle_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_Bio2"
        app:menu="@menu/bottom_main_menu"
        app:itemBackground="@color/colorPrimary"
        app:itemIconTint="@android:color/white"
        android:layout_marginTop="10dp"
        app:itemTextColor="@android:color/white" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:menu="@menu/bottom_main_menu"
        app:itemBackground="@color/colorPrimary"
        app:itemIconTint="@android:color/white"
        app:itemTextColor="@android:color/white" />


    <ScrollView
        android:id="@+id/gridScroll"
        android:layout_width="match_parent"
        android:layout_height="387dp"
        android:layout_above="@+id/bottom_navigation"
        android:layout_below="@+id/middle_navigation"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="60dp"
        android:isScrollContainer="true">

        <LinearLayout
            android:id="@+id/boxContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            tools:visibility="visible">

            <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="15dp"
            android:nestedScrollingEnabled="true"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:visibility="visible"
            tools:visibility="visible">



                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="0"
                    app:srcCompat="@drawable/image00" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="1"
                    app:srcCompat="@drawable/image00" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="2"
                    app:srcCompat="@drawable/image00" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="3"
                    app:srcCompat="@drawable/image00" />

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="0"
                    app:srcCompat="@drawable/image00" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="1"
                    app:srcCompat="@drawable/image00" />


                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="2"
                    app:srcCompat="@drawable/image00" />


                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="3"
                    app:srcCompat="@drawable/image00" />


                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_column="0"
                    app:srcCompat="@drawable/image00" />


                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_column="1"
                    app:srcCompat="@drawable/image00" />

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_column="2"
                    app:srcCompat="@drawable/image00" />

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_column="3"
                    app:srcCompat="@drawable/image00" />

                <ImageView
                    android:id="@+id/imageView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="4"
                    android:layout_column="0"
                    app:srcCompat="@drawable/image00" />

                <ImageView
                    android:id="@+id/imageView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="4"
                    android:layout_column="1"
                    app:srcCompat="@drawable/image00" />

                <ImageView
                    android:id="@+id/imageView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="4"
                    android:layout_column="2"
                    app:srcCompat="@drawable/image00" />

                <ImageView
                    android:id="@+id/imageView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="4"
                    android:layout_column="3"
                    app:srcCompat="@drawable/image00" />

                <ImageView
                    android:id="@+id/imageView17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="5"
                    android:layout_column="0"
                    app:srcCompat="@drawable/image00" />

                <ImageView
                    android:id="@+id/imageView18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="5"
                    android:layout_column="1"
                    app:srcCompat="@drawable/image00" />

                <ImageView
                    android:id="@+id/imageView19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="5"
                    android:layout_column="2"
                    app:srcCompat="@drawable/image00" />

                <ImageView
                    android:id="@+id/imageView20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="5"
                    android:layout_column="3"
                    app:srcCompat="@drawable/image00" />



            </GridLayout>

        </LinearLayout>


    </ScrollView>


</RelativeLayout>